# esp32-ship-panel

./: .gitmodules  CMakeLists.txt  sdkconfig.defaults
components/Preferences/: CMakeLists.txt  Preferences.cpp
components/Preferences/include/: Preferences.h
fatfs/: readme.txt
main/: CMakeLists.txt  Display.cpp  Display.hpp  Gui.cpp  Gui.hpp  GuiThread.cpp  GuiThread.hpp  Kconfig.projbuild  Lcd.cpp  Lcd.hpp  Periodic.cpp  Periodic.hpp  Theme.cpp  Theme.hpp  device_conf.hpp  log_tag.hpp  main.cpp  main.hpp
